Clean up JMH benchmark code (#238)